--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Ignore all files in wwwroot
+**/wwwroot/**
+
+# But keep the folder itself
+!**/wwwroot/.gitkeep
+
 # User-specific files
 *.rsuser
 *.suo
