added hangfire reccurring jobs to start/end auctions automatically

--- a/src/services/AuctionService/AuctionService.API/appsettings.json
+++ b/src/services/AuctionService/AuctionService.API/appsettings.json
@@ -32,5 +32,9 @@
     "Authority": "https://localhost:7250",
     "Audience": "https://localhost:7250/resources"
   },
+  "CronSettings": {
+    "StartAuctions": "* * * * *",
+    "EndAuctions": "* * * * *"
+  },
   "AllowedHosts": "*"
 }
