--- a/src/services/FileService/FileService.API/FileService.API.csproj
+++ b/src/services/FileService/FileService.API/FileService.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\shared\Protos\Protos.csproj" />
+    <ProjectReference Include="..\..\..\shared\SharedInfrastructure\SharedInfrastructure.csproj" />
   </ItemGroup>
 
 </Project>
